feat(wallet): replace storeId with walletId for wallet operations
- Migrate wallet operations to use walletId as the primary identifier.
- Replace storeId with walletId in domain models, DTOs, and entity mappings.
- Update all wallet service methods and tests to reflect the new identifier.
- Add SQL formula in `UserJpaEntity` for walletId lookup from storeId.

This change simplifies wallet handling by eliminating dependency on storeId, ensuring more direct wallet management.